--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "styled-component": "^2.8.0",
