--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@types/styled-components-react-native": "^5.2.0",
     "expo": "~47.0.6",
     "expo-font": "~11.0.1",
@@ -19,6 +21,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "styled-component": "^2.8.0",
